tests/types/errors/compare_int_string.mochi
// MEP-4 P9: comparing across incompatible kinds must reject.
let x = 1 == "y"
