tests/types/errors/compare_int_string.err
1. error[T013]: incompatible types in comparison
  --> tests/types/errors/compare_int_string.mochi:2:11

  2 | let x = 1 == "y"
    |           ^

help:
  Use comparable types like numbers or strings with `<`, `>`.
